# PSTD

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.agents/skills/: README.md  references-and-assets.md
.github/: pr470-refresh  pull_request_template.md
.github/scripts/: apply-child-plain-text-eml.py
.github/workflows/: add-sample-pst-fixture.yml  agent-apply-recipient-output.yml  agent-vertical-37-membership-transport.yml  agent-vertical37-patch.yml  (+46 more)
docker/: Dockerfile
docs/: DOCUMENTATION_STATUS.md  PATCH_APPLICATION_WORKFLOW.md  README.md  pq27.md  pq28.md  pq29.md  pq30.md  pq31.md  pq32.md  pq33.md  pq34.md  pq35.md  pq36.md  pq37.md  quickstart.md
fixtures/: README.md
python/: README.md  setup.py
scripts/: apply_docx_payload_vertical.py  fix_docx_payload_patch.py  generate-ansi-fixture.ps1  pq32_descriptor_layout.py  pq33_payload_prefix.py  pq34_slblock_boundary.py  pq35_slentry_resolution.py  pq36_payload_admission.py  public_pst_progress.py  refine_docx_payload_vertical.py  refine_docx_payload_vertical_v2.py  rtf_fromhtml_to_html.py
src/: cli.rs  config.rs  eml.rs  error.rs  lib.rs  main.rs  progress.rs
tests/: cli_smoke.rs  m3.rs  m7_parser_depth.rs  output_contract.rs  pst_binary.rs  test_rtf_fromhtml_to_html.py  vertical36_embedded_eml.rs
tools/: patch_pr457_attachment_records.py  patch_pr457_plain_child.py  patch_pr457_tika_workflow.py  patch_vertical35_docs.py  patch_vertical36_docs.py  patch_vertical36_tika_workflow.py  rendered-pr457-tika-workflow.yml  temp_vertical36_parent_eml_patch.py  temp_vertical36_patch.py
(+398 files in other folders)
