[package]
name = "pstd"
version = "0.1.0"
edition = "2021"
description = "PST email data extractor"
license = "MIT"
default-run = "pstd"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
